--- a/src/main/resources/html/TZWebSelectorBundle/TZ_CLASS_A_HTML.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_CLASS_A_HTML.html
@@ -1,1 +1,1 @@
-<li><input  type="radio"  id ="%bind(:4)" name="%bind(:1)" value="%bind(:2)" /><label for="%bind(:4)">%bind(:3)</label></li>
+<label for="%bind(:4)" class="dire_lable"><input  type="radio"  id ="%bind(:4)" name="%bind(:1)" value="%bind(:2)" />%bind(:3)</label>
