--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_FIELD_HTML2.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_FIELD_HTML2.html
@@ -1,14 +1,15 @@
+<div class="search_icodiv">
 <div class="main_full_line">
 	<div class="main_full_line_left">
 		<span class="reg_title_star">%bind(:1)</span>%bind(:2)：
 	</div>
 	<div class="main_full_line_right">
-		<select name="%bind(:3)" id="%bind(:3)" class="combox_351px">
-			%bind(:4)
-		</select>
+      	<input name="%bind(:3)" type="text" class="input_351px" id="%bind(:3)" %bind(:4) value="%bind(:6)"/>
+      	%bind(:5)
       	<span id="%bind(:3)Style" class="alert_display_none">
-			<img src="%bind(:5)/alert.png" width="16" height="16" class="alert_img"  />
+			<img src="%bind(:7)/alert.png" width="16" height="16" class="alert_img"/>
 	  		<label id="%bind(:3)_status"></label>
 		</span>
     </div>
+</div>
 </div>
