--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SEX_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SEX_HTML.html
@@ -1,6 +1,6 @@
 <div class="main_full_line">
 	<div class="main_full_line_left">
-		<span class="reg_title_star">%bind(:1)</span>%bind(:2):
+		<span class="reg_title_star">%bind(:1)</span>%bind(:2)：
 	</div>
   	<div class="main_full_line_right">
     	<label for="n">
