--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_GD_SUR_MULCHOICE_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_GD_SUR_MULCHOICE_HTML.html
@@ -1,1 +1,1 @@
-%bind(:1)（%bind(:2)）             -------------------%bind(:3)票<br/>
+%bind(:1)%bind(:2)（%bind(:3)）             -------------------%bind(:4)票<br/>
