登录注册维护以及个人账号管理

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_EN_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_EN_HTML.html
@@ -27,9 +27,7 @@
 	  		<div class="main_full_line">
 	    		<div class="main_full_line_title">Register</div>
 	    		<div class="main_full_full_right">
-					<a href="%bind(:6)" class="blue_">
-						&nbsp;&nbsp;&nbsp;back
-					</a>
+					<!--<a href="%bind(:6)" class="blue_"><img src="%bind(:4)/arrow.png" width="8" height="7">back</a>-->
 				</div>
 	  		</div>
 			<div class="main_full_lines"></div>
@@ -42,7 +40,7 @@
 			      
 			<div class="main_full_line" id="button_yzfs" %bind(:8)>
 				<div class="main_full_line_right">
-	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()"/>
+	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()" style="width:351px;"/>
 				</div>
 	  		</div>
 	  		<div class="main_full_lines"></div>
