--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_EN_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_EN_HTML.html
@@ -51,7 +51,7 @@
 					<span class="reg_title_star">*</span>Verification Code:
 				</div>
 				<div class="main_full_line_right">
-					<input name="yzm" type="text" class="input_351px" id="yzm" onblur="check_yzm(this.value)"/>
+					<input name="yzm" type="text" class="input_351px" id="yzm" onblur="check_yzm(this.value)" style="width:351px;"/>
 			    	<!--input name="yzm" type="text" class="input_105px" id="yzm"  onblur="check_yzm(this.value)"/>
 			      	<a id="changeImg" href="javascript:void(0)"><img id="yzmImg" src="" width="113" height="34" class="img_num" /></a-->
 			      	<span id="yzmStyle" class="alert_display_none">
