--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
@@ -42,7 +42,7 @@
 
 			<div class="main_full_line" id="button_yzfs" %bind(:8)>
 				<div class="main_full_line_right">
-	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()"/>
+	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()" style="width:351px;"/>
 				</div>
 	  		</div>
 	  		<div class="main_full_lines"></div>
