--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_NOT_PHOTO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_NOT_PHOTO_HTML.html
@@ -22,7 +22,7 @@
 <script type="text/javascript"
 	src="%bind(:25)/statics/js/website/account/wdzh.js"></script>
 <!-- content start -->
-<div class="main_inner">
+<div class="main_mid_left">
 	<div class="main_inner_title">
 		<div class="main_inner_title_text_wide">%bind(:13)</div>
 	</div>
