--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_ZHBD_HTML2.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_ZHBD_HTML2.html
@@ -1,4 +1,4 @@
-<div class="main_inner_left" style="float:left;width:100%">
+<div class="main_mid_left" style="float:left;width:100%">
 	<div class="main_inner_right_line_50px" style="display: %bind(:12);">
 		<div class="main_inner_right_line_left">%bind(:11)：</div>
 	    <div class="main_inner_right_line_mid" id="BindEmail">%bind(:4)</div>
