--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_JHFS_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_JHFS_ENG_HTML.html
@@ -1,6 +1,6 @@
 <div class="main_full_line">
 				<div class="main_full_line_left">
-					<span class="reg_title_star">*</span>Activation Way:
+					<span class="reg_title_star">*</span>Activation Way：
 				</div>
 				<div class="main_full_line_right">
 				
