--- a/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndex.html
+++ b/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndex.html
@@ -26,3 +26,4 @@
 	src="%bind(:1)/statics/js/website/broad/commonfunc.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/broad/index/init.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/clamp/clamp.js"></script>
