--- a/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndexRelease.html
+++ b/src/main/resources/html/TZSitePageBroadStyleBundle/TzScriptsIndexRelease.html
@@ -10,3 +10,4 @@
 	src="%bind(:1)/statics/js/website/broad/commonfunc.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/website/broad/index/initp.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/clamp/clamp.js"></script>
