--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MTESTTYPE.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MTESTTYPE.html
@@ -16,8 +16,7 @@
 				$("#msg").html("请选择一个测试方向！");
 			} else {
 				var wj = "A" + $('input:radio:checked').attr("id");
-				$("#" + wj).trigger("click");
-				document.form1.submit();
+				window.location.href = $("#" + wj).attr("href");
 			}
 		}
 	</script>
