--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML2.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML2.html
@@ -18,9 +18,9 @@
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript"
-	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
-<script type="text/javascript"
-	src="%bind(:1)/statics/js/website/account/init.js"></script>
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
+<script type="text/javascript"	src="%bind(:1)/statics/js/website/account/init.js"></script>	
+<!-- <script type="text/javascript"	src="%bind(:1)/statics/js/website/broad/index/initp.js"></script> -->
 </head>
 <body style="background: #eee">
 	<div id="headarea" class="top assdiv" area-add="false" area-edit="true"
