--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TH_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TH_HTML.html
@@ -1,8 +1,10 @@
-<tr class="head-line">
-	<td width="12%">日期</td>
-	<td width="12%">开始时间</td>
-	<td width="20%">报道地点</td>
-	<td width="20%">备注</td>
-	<td width="21%">预约状态（已预约/可预约）</td>
-	<td width="15%">确认预约</td>
+<thead>
+<tr>
+	<td>报名日期</td>
+	<td>报到时间</td>
+	<td>报到地点</td>
+	<td>备注</td>
+	<td>预约状态</br>(已预约／可预约)</td>
+	<td>操作</td>
 </tr>
+</thead>
