--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_ANS_NEW_HTML.html
@@ -238,6 +238,7 @@ p {
 <script src="%bind(:1)/statics/js/onlineSurvey/answer/amcharts.js" type="text/javascript"></script>
 <script src="%bind(:1)/statics/js/onlineSurvey/answer/pie.js" type="text/javascript"></script>
 <script src="%bind(:1)/statics/js/onlineSurvey/answer/serial.js" type="text/javascript"></script>
+
 <!-- scripts for exporting chart as an image -->
 <!-- Exporting to image works on all modern browsers except IE9 (IE10 works fine) -->
 <!-- Note, the exporting will work only if you view the file from web server -->
@@ -253,8 +254,8 @@ p {
 <script src="%bind(:1)/statics/js/onlineSurvey/answer/jspdf.plugin.addimage.js"
 	type="text/javascript"></script>
 <!-- <![endif]-->
-<script type="text/javascript" charset="utf-8"
-	src="%bind(:1)/statics/js/onlineSurvey/answer/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="%bind(:1)/statics/js/onlineSurvey/answer/jquery-1.11.0.min.js"></script>
+<script src="%bind(:1)/statics/js/onlineSurvey/answer/highcharts.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css"
 	href="%bind(:1)/statics/js/onlineSurvey/answer/css/easyui.css" />
 <link rel="stylesheet" type="text/css"
