登录注册及个人信息维护页面修改

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
@@ -70,7 +70,7 @@
 			     </div>
 			</div>
 	  	<div class="main_full_line">
-				<div class="bt_register" id="submitbutton"><span style="color:#FFFFFF">补充个人信息</span></div>
+				<div class="bt_mregister" id="submitbutton"><span style="color:#FFFFFF">补充个人信息</span></div>
 </div>
 		</div>
 
