--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_HTML2.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WDZH_HTML2.html
@@ -23,8 +23,8 @@
 	src="%bind(:27)/statics/js/website/account/wdzh.js"></script>
 <!-- content start -->
 <div class="main_mid_left">
-	<div class="main_inner_title">
-		<div class="main_inner_title_text_wide">%bind(:13)</div>
+	<div class="main_tit">
+		%bind(:13)
 	</div>
 	<div class="mian_inner_nav" id="tab1">
 		<div class="float_left">
