登录注册激活以及发布登录注册页维护

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SUCCESSE_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SUCCESSE_HTML.html
@@ -9,7 +9,7 @@
 <body>
 
 <!-- content start -->
-<div id="main">
+<div id="main" class="regTip">
 <div class="padding_div_50px"></div>
 <div class="main_full_top"></div>
 <div class="main_full">
