--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_JHYX_EP_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_JHYX_EP_ENG_HTML.html
@@ -143,7 +143,7 @@
 </head>
 <body>
 <!-- content start -->
-<div id="main">
+<div id="main" class="actTip">
 	<form action="" method="post" enctype="multipart/form-data" name="forgetForm" id="forgetForm">
 		<div class="padding_div_40px2"></div>
 		<div class="padding_div_40px2"></div>
