--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REGSUCCESS_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REGSUCCESS_HTML.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <!-- content start -->
-<div id="main">
+<div id="main" class="actTip">
 <div class="padding_div_50px"></div>
 <div class="main_full_top"></div>
 <div class="main_full">
