--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
@@ -241,7 +241,7 @@
 </head>
 <body>
 <!-- content start -->
-<div id="main">
+<div id="main" class="forgetTip">
 	<form action="" method="post" enctype="multipart/form-data" name="forgetForm" id="forgetForm">
 		<div class="padding_div_40px"></div>
 		<div class="padding_div_40px"></div>
