--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_DIG_TB_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_DIG_TB_HTML.html
@@ -4,11 +4,11 @@
 		<font  color=blue>%bind(:3)</font>
 	</h3>
 	<h5 style="text-align: left">2016年问卷统计情况</h5>
-	<div id="chartdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div>
-	<div id="serialdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div>
-	 <h5 style="text-align: left">历史问卷统计情况</h5>
-	<div id="hischartdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div>
-	<div id="hisserialdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div> 
+	<div id="chartdiv_%bind(:4)" style="width: 50%; float: left; display: block; height: 350px;"></div>
+	<div id="serialdiv_%bind(:4)" style="width: 50%; float: left; display: block; height: 350px;"></div>
+	 <!-- <h5 style="text-align: left">历史问卷统计情况</h5>
+	<div id="hischartdiv_%bind(:4)" style="width: 50%; float: left; display: block; height: 350px;"></div>
+	<div id="hisserialdiv_%bind(:4)" style="width: 50%; float: left; display: block; height: 350px;"></div>  -->
     
 	<script>
 	var arrColor = [
@@ -36,8 +36,8 @@
 			                itemDistance:10,
 			                labelFormat :'{name}({percentage:.2f}%)',
 			                itemStyle: { "color": "#333333", "cursor": "pointer", "fontSize": "12px", "fontWeight": "normal" },
-			                layout:'vertical',//垂直方向
-			                align:'left',//水平方向
+			                layout:'vertical',
+			                align:'left',
 							verticalAlign:'middle',
 							borderRadius:5,
 							borderColor:"#909090",
@@ -145,10 +145,7 @@
 			                itemStyle: { "color": "#333333", "cursor": "pointer", "fontSize": "12px", "fontWeight": "normal" },
 			                layout:'vertical',
 			                align:'left',
-							verticalAlign:'middle',
-							borderRadius:5,
-							borderColor:"#909090",
-							borderWidth:1
+							verticalAlign:'middle'
 			        },
 			        plotOptions: {
 			            pie: {
