--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_M_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_M_HTML.html
@@ -1,14 +1,14 @@
-<div  style="width: 100%; float: left; border: 1px solid #E0E0E0; padding: 5px; display: block; margin-bottom: 10px">
+<div  style="width: 100%; border: 1px solid #E0E0E0; padding: 5px; display: block; margin-bottom: 10px">
 	<h3 style="text-align: left">
 		%bind(:1) <small style="color: gray">%bind(:2)</small> 
 		<font  color=blue>%bind(:3)</font>
 	</h3>
 	<h5 style="text-align: left">2016年问卷统计情况</h5>
-	<div id="chartdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div>
-	<div id="serialdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div>
+	<div id="chartdiv_%bind(:4)" style="width: 100%;display: block; height: 300px;"></div>
+	<div id="serialdiv_%bind(:4)" style="width: 100%;display: block; height: 300px;"></div>
 	 <h5 style="text-align: left">历史问卷统计情况</h5>
-	<div id="hischartdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div>
-	<div id="hisserialdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 350px;"></div> 
+	<div id="hischartdiv_%bind(:4)" style="width: 100%;display: block; height: 300px;"></div>
+	<div id="hisserialdiv_%bind(:4)" style="width: 100%;display: block; height: 300px;"></div> 
     
 	<script>
 	var arrColor = [
