--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_CANTNOT_APPLY.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_CANTNOT_APPLY.html
@@ -1,6 +1,6 @@
 <div class="zxj_tit1">%bind(:1)</div>
 <div class="zxj_mba">
-     <a href="javascript:void(0);" class="sq_btn">
+     <a href="javascript:void(0);" class="sq_btn_no">
          <div class="sq_icon">
              <i></i>
              <span>%bind(:2)</span>
