--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
@@ -278,5 +278,7 @@ p {
 		%bind(:2) <small>问卷收集数量： %bind(:3)</small>
 	</h2>
 	 %bind(:4)
+	 <input type="button" onclick="" value="马上申请清华MBA"/>
+
 </body>
 </html>
