--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_LC_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_LC_HTML.html
@@ -1,6 +1,6 @@
 <div class="zxj_tit1">%bind(:1)</div>
 <div class="select_project">  
-	<a href="#" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
+	<a href="%bind(:7)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
 </div>
 <div class="zxj_mba">
 	
