--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_CLASS_LC_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_CLASS_LC_HTML.html
@@ -3,7 +3,7 @@
 <div class="zxj_main_body">
 	<div class="main_mid_zxj_interview">
 		<div class="select_project">  
-			<a href="#" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
+			<a href="%bind(:7)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
 		</div>
 		<div class="zxj_mba">
 			
