--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -52,8 +52,8 @@
 
 	<script type="text/javascript"
 		src="%bind(:32)/statics/js/lib/jquery/jquery.min.js"></script>
-	<!--  <script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/util/layer.js"/>-->
-	<script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/appwidget/layer/layer.min.js"></script>
+	 <script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/util/layer.js"/>
+	<!--<script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/appwidget/layer/layer.min.js"></script> -->
 	<!-- <script type="text/javascript" src="%bind(:32)/statics/js/onlineSurvey/layer/layer.js"></script> -->
 	 <script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/appwidget/layer/extend/layer.ext.js"></script>
 
