测测能否上清华

--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
@@ -82,7 +82,7 @@
 	</head>
 	<body style="padding: 10px">
 		 %bind(:3)
-		 <input type="button" value="马上申请清华MBA" id="applyMBA" onclick="www.baidu.com"/>
+		 <input type="button" value="马上申请清华MBA" id="applyMBA" onclick="%bind(:4)"/>
 		 <input type="hidden" value="%bind(:2)" id="pageno"/>
 	</body>
 </html>
