--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_ANS_NEW_HTML.html
@@ -236,9 +236,9 @@ p {
 }
 </style>
 <script src="%bind(:1)/statics/js/onlineSurvey/answer/amcharts.js" type="text/javascript"></script>
-<script src="%bind(:1)/statics/js/onlineSurvey/answer/pie.js" type="text/javascript"></script>
+<!--  <script src="%bind(:1)/statics/js/onlineSurvey/answer/pie.js" type="text/javascript"></script>
 <script src="%bind(:1)/statics/js/onlineSurvey/answer/serial.js" type="text/javascript"></script>
-
+-->
 <!-- scripts for exporting chart as an image -->
 <!-- Exporting to image works on all modern browsers except IE9 (IE10 works fine) -->
 <!-- Note, the exporting will work only if you view the file from web server -->
