--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
@@ -13,6 +13,7 @@
 			var TzUniversityContextPath = "%bind(:21)";
 		</script>
 		<script type="text/javascript" src="%bind(:21)/statics/js/lib/jquery/jquery.min.js"></script>
+		<script type="text/javascript" src="%bind(:21)/statics/js/lib/jquery/browser.js"></script>
 		<script type="text/javascript" src="%bind(:21)/statics/js/survey/assets/libs/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="%bind(:21)/statics/js/survey/assets/js/common.js"></script>
 
@@ -71,6 +72,29 @@
 	    	$.datepicker._gotoToday = function (id) {
                 $(id).datepicker('setDate', new Date()).datepicker('hide').blur();
        		};
+       		
+    		function SetCwinHeight(obj) {
+    			var cwin = obj;
+    			var ab = 0;
+    			if ($.browser.msie && ($.browser.version == "6.0")) {
+    				ab = 0;
+    			}
+    			if (document.getElementById) {
+    				if (cwin && !window.opera) {
+    					if (cwin.contentDocument && cwin.contentDocument.body.offsetHeight) {
+    						ab = 0;
+    						cwin.height = '150px';
+    						cwin.height = (cwin.contentDocument.body.offsetHeight + ab) + 'px';
+    					} else if (cwin.Document && cwin.Document.body.scrollHeight) {
+    						cwin.height = cwin.Document.body.scrollHeight;
+    					}
+    				} else {
+    					if (cwin.contentWindow.document && cwin.contentWindow.document.body.scrollHeight){
+    						cwin.height = cwin.contentWindow.document.body.scrollHeight + ab;
+    					}
+    				}
+    			}
+    		}
 		</script>
 		
 	</head>
