--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_LOGIN.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_LOGIN.html
@@ -110,7 +110,7 @@
 							</div>
 							<div class="info" style="font-size: 14px;">
 								<p style="text-align: left">注：已注册清华MBA报考服务系统的用户可以直接使用报考服务系统的账号密码进行测试</p>
-								<p style="text-align: left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;测试版，如有问题请联系电话：010-62781848</p>
+								<p style="text-align: left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;测试版，如有问题请联系电话：010-62781848&nbsp;&nbsp;&nbsp;<a href="%bind(:4)" target="_black"><font style="color:#997423;">忘记密码</font></a></p>
 							</div>
 							<div class="submit">
 								<a onclick="formSubmit();" href="javascript:void(0);">
