--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_SUR_ANS_NEW_HTML.html
@@ -55,6 +55,7 @@
 		<!-- Exporting to image works on all modern browsers except IE9 (IE10 works fine) -->
 		<!-- Note, the exporting will work only if you view the file from web server -->
 		<!--[if (!IE) | (gte IE 10)]> -->
+		<script src="%bind(:1)/statics/js/onlineSurvey/answer/amcharts.js" type="text/javascript"></script>
 		<script src="%bind(:1)/statics/js/onlineSurvey/answer/amexport.js" type="text/javascript"></script>
 		<script src="%bind(:1)/statics/js/onlineSurvey/answer/rgbcolor.js" type="text/javascript"></script>
 		<script src="%bind(:1)/statics/js/onlineSurvey/answer/canvg.js" type="text/javascript"></script>
