--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_HTML.html
@@ -1,16 +1,17 @@
-<div  style="width: 100%; float: left; border: 1px solid #E0E0E0; padding: 5px; display: block; margin-bottom: 10px">
-	<h3 style="text-align: left">
-		%bind(:1) <font  color=blue>%bind(:3)</font>
-	</h3>
+<div  style="width: 98%; border: 1px solid #E0E0E0; padding: 5px; margin-bottom: 10px">
+	<h3 style="text-align:left">%bind(:1)<font color=blue>%bind(:3)</font></h3>
 	
-	<h5 style="text-align: left">历史问卷统计情况</h5>
-	<div id="hischartdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 260px;"></div>
-	<div id="hisserialdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 260px;"></div> 
-	<h5 style="text-align: left">已参加测试的%bind(:2)名考生的分布图：</h5>
-	<div id="chartdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 260px;"></div>
-	<div id="serialdiv_%bind(:4)" style=" width: 50%;float: left; display: block; height: 260px;"></div>
-	
-    
+	<h5 style="text-align:left">历史问卷统计情况</h5>
+	<div style="width:100%;height:420px;">
+		<div id="hischartdiv_%bind(:4)" style="width:48%;float:left;"></div>
+		<div id="hisserialdiv_%bind(:4)" style="width:48%;float:left;"></div>
+	</div>
+
+	<h5 style="text-align:left">已参加测试的%bind(:2)名考生的分布图：</h5>
+	<div style="width:100%;height:420px;">
+		<div id="chartdiv_%bind(:4)" style="width:48%;float:left;"></div>
+		<div id="serialdiv_%bind(:4)" style="width:48%;float:left;"></div>
+	</div>
 	<script>
 		var arrColor = ['#FF4700', '#F10EF1', '#03FC26', '#3030CF', '#FCF503', '#640A62', '#245D2C', '#1A5267', '#6A0A03', '#C60210', '#678B1A', '#B8860B', '#6F7CBC', '#6F7CBC', '#7b68ee', '#cd5c5c'];
 		var chartData_%bind(:4) = [%bind(:5)];
@@ -149,12 +150,7 @@
 					align: 'center',
 					itemDistance: 10,
 					labelFormat: '{name}({percentage:.2f}%)',
-					itemStyle: {
-						"color": "#333333",
-						"cursor": "pointer",
-						"fontSize": "12px",
-						"fontWeight": "normal"
-					},
+					itemStyle: {"color": "#333333","cursor": "pointer","fontSize": "12px","fontWeight": "normal"},
 					layout: 'vertical',
 					align: 'left',
 					verticalAlign: 'middle',
@@ -180,9 +176,7 @@
 						},
 						point: {
 							events: {
-								legendItemClick: function() {
-									return false
-								}
+								legendItemClick: function() {return false}
 							}
 						}
 					}
