--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_BKRL_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_BKRL_HTML.html
@@ -4,13 +4,13 @@
                	      <ul>
                	  	 	<li class="rili_list">
                	  	 		<a href="#" class="zxj_date">
-               	  	 			<p>24</p>
-               	  	 			<span>12月</span>
+               	  	 			<p>%bind(:3)</p>
+               	  	 			<span>%bind(:4)月</span>
                	  	 		</a>
                	  	 		<a class="date_body" id="date_body_view" style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">
-               	  	 			【联考报名】2017年入学清华MBA考生全国联考报名注意事项（11月6日前完成清华研招网照片上传）【联考报名】2017年入学清华MBA考生全国联考报名注意事项（11月6日前完成清华研招网照片上传）
+               	  	 			%bind(:5)
                	  	 		</a>
-                            <div class="location"><i></i><span>第一教学楼</span></div>
+                            <div class="location"><i></i><span>%bind(:5)</span></div>
                	  	 	</li>
                	  	 	<li class="rili_list">
                	  	 		<a href="#" class="zxj_date">
