--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1056,8 +1056,21 @@
 				});
 				
 				$(function(){
+					//var home_page = $("#HOME_PAGE").parent().children("li").first();
+					//console.dir($("#HOME_PAGE").parent());
+					//console.dir("1111");
+					//console.dir($("#HOME_PAGE").parent().children("li"));
+					//console.dir("1111");
+					//console.dir(home_page);
+					//console.log($("#HOME_PAGE").parent().attr("id"));
+					var home_page =$("#HOME_PAGE").parent().attr("id");
+					$(document).on("click","#"+home_page, function(event){
+						//alert("backToHome");
+						backToHome("%bind(:10)","%bind(:11)");
+					});
+					
 				     $(document).on("click", "#app_preButtom", function(event){
-				    	 	console.log("1111");
+				    	 	///console.log("1111");
 							var pwdTitleId = $("#%bind(:45)");
 							var pwdDivId = $("#%bind(:46)");
 							var pwdDiv2Id = $("#%bind(:47)");
