--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_LOGIN.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_LOGIN.html
@@ -53,14 +53,7 @@
 				$.dialog.setting.extendDrag = true;
 				var path = $.dialog.setting.path
 			});
-
 		</script>
-		<style type="text/css">
-			.email {
-				color: #FF0000;
-				margin: 5px 0px 0px 10px;
-			}
-		</style>
 	</head>
 	<body>
 		<div id="container_index">
@@ -83,29 +76,29 @@
 								<img src="%bind(:1)/statics/images/cantsinghua/jjs/icon_mail.png" width="24" height="24" />请提供有效电子邮箱：&nbsp;
 								<div class="input" style="width: 405px;">
 									<input class="itext" name="email" id="email" type="text" tabindex="1" autocomplete="off"  />
-									<span id="emailTip" style="color: #ff3100;">&nbsp;</span>
+									<span id="emailTip">&nbsp;</span>
 								</div>
 							</div>
 							<div class="item">
 								<img src="%bind(:1)/statics/images/cantsinghua/jjs/icon_lock.png" width="24" height="24" />请<span id="szmm">设置测试</span>密码：&nbsp;
 								<div class="input" style="width: 405px;">
 									<input class="itext" name="password" type="password" id="password" tabindex="2"/>
-									<span id="passwordTip" style="color: #ff3100;">&nbsp;</span>
+									<span id="passwordTip">&nbsp;</span>
 								</div>
 							</div>
 							<div class="item" id="qrmm">
 								<img src="%bind(:1)/statics/images/cantsinghua/jjs/icon_check.png" width="24" height="24" />确认密码：&nbsp;
 								<div class="input" style="width: 405px;">
 									<input class="itext" name="repassword" type="password" id="repassword" tabindex="3" />
-									<span id="repasswordTip" style="color: #ff3100;">&nbsp;</span>
+									<span id="repasswordTip">&nbsp;</span>
 								</div>
 							</div>
 							<div class="item">
 								<img src="%bind(:1)/statics/images/cantsinghua/jjs/icon_check.png" width="24" height="24" />验 证 码：&nbsp;
 								<div class="input" style="width: 405px;">
 									<input class="itext" name="yzm" type="text" id="yzm" tabindex="4" />
-									<a id="changeImg" href="javascript:void(0)">&nbsp;&nbsp;<img src="" style="float:none" class="img_num" id="yzmImg" onclick="SetImgCode()" height="24" width="75"/> </a>
-									<span id="yzmTip" style="color: #ff3100;">&nbsp;</span>
+									<a id="changeImg" href="javascript:void(0)"><img src="" style="float:left;margin-left:5px;" class="img_num" id="yzmImg" onclick="SetImgCode()" height="24" width="75"/> </a>
+									<span id="yzmTip">&nbsp;</span>
 								</div>
 							</div>
 							<div class="info" style="font-size: 14px;">
@@ -143,7 +136,7 @@
 							<input type="hidden" name="_Lang" id="_Lang" value="ZHS"/>
 						</form>
 					</div>
-					<div class="footerinfo">版权所有 ：2014 清华大学经济管理学院</div>
+					<div class="footerinfo">版权所有 ：2017 清华大学经济管理学院</div>
 				</div>
 			</div>
 		</div>
