--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1074,7 +1074,7 @@
 							var pwdTitleId = $("#%bind(:45)");
 							var pwdDivId = $("#%bind(:46)");
 							var pwdDiv2Id = $("#%bind(:47)");
-							console.log("pwdTitleId:"+pwdTitleId);
+							sconsole.log("pwdTitleId:"+pwdTitleId);
 							console.log("pwdDivId:"+pwdDivId);
 							console.log("pwdDiv2Id:"+pwdDiv2Id);
 							
