测测上清华

--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MLOGIN.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MLOGIN.html
@@ -70,6 +70,7 @@
 			.jg{margin-top:15px;border-spacing:5px}
 			.footer{text-align:center;color:#555}
 			.mt25{text-align:center;margin-top:15px}
+			[id$=Tip]{color:#997423;margin-left:5px;}
 			<!--
 			.tb td{height:25px}
 			-->
@@ -106,7 +107,7 @@
 								<tr><td colspan="2">
 										<input class="itext" name="yzm" type="text" id="yzm" style="width: 70%;"/>
 										<a id="changeImg" href="javascript:void(0)">
-											<img src="" style="float:none" class="img_num" id="yzmImg" onclick="SetImgCode()" height="36" width="80"/>
+											<img src="" style="float:none;vertical-align:middle;" class="img_num" id="yzmImg" onclick="SetImgCode()" height="36" width="80"/>
 										</a>
 									</td>
 								</tr>
