--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TR.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TR.html
@@ -1,2 +1,2 @@
 <tr><td>&nbsp;<a id='A%bind(:1)' style='display: none;' href='%bind(:2)' target='_blank'></a></td></tr>
-<tr><td><input type='radio' name='cswj' id='%bind(:1)' value='%bind(:1)' /><span onclick='form1.%bind(:1).checked=true'>%bind(:3)</span></td></tr>
+<tr><td><label><input type='radio' name='cswj' id='%bind(:1)' value='%bind(:1)' />%bind(:3)</label></td></tr>
