--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MTESTTYPE.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MTESTTYPE.html
@@ -29,7 +29,7 @@
 		.button:visited{font-size:12px;color:white;text-decoration:none}
 		.button:hover{font-size:12px;color:white;text-decoration:none}
 		.xzwj{text-align:center;margin-top:0px;color:#0c1a6f;font-family:"微软雅黑"}
-		.footer{text-align:center;color:#555}
+		.footer{text-align:center;color:#555;position:fixed;bottom:10px;width:300px;left:50%;margin-left:-150px;}
 	</style>
 </head>
 <body style="width: 100%; background: #f5f5f5; margin-left: 0px; margin-right: 0px; margin-top: 0px;">
