招生站点首页报考日历区域修改。

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_BKRL_LI_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_BKRL_LI_HTML.html
@@ -1,9 +1,9 @@
 <li class="rili_list">
-		<a href="%bind(:1)" class="zxj_date">
+		<a href="%bind(:1)" target="_blank" class="zxj_date">
 			<p>%bind(:2)</p>
 			<span>%bind(:3)月</span>
 		</a>
-		<a class="date_body" id="date_body_view" style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">
+		<a class="date_body" href="%bind(:1)" target="_blank" style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">
 			%bind(:4)
 		</a>
 	    <div class="location"><i></i><span>%bind(:5)</span></div>
