招生网站首页相关修改

--- a/src/main/resources/html/TZApplicationGuideBundle/TZ_APP_GUIDE_HTML.html
+++ b/src/main/resources/html/TZApplicationGuideBundle/TZ_APP_GUIDE_HTML.html
@@ -75,6 +75,7 @@
 		LoadMenu("%bind(:5)","%bind(:6)","");
 		LoadFooter("%bind(:5)","%bind(:6)","");
 		LoadWelcome("%bind(:5)","%bind(:6)","");
+		LoadLeftArea("%bind(:5)","%bind(:6)", "");
 	});
 </script>
 
