--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PERFECT_HTML.html
@@ -63,6 +63,7 @@
 				<div class="main_full_line_right">
 			    	<input name="yzmEmail" type="text" class="input_225px" id="yzmEmail"  onblur="check_yzmEmail(this.value)"/>
 			      	<a id="changeImgEmail" href="javascript:void(0)"><img id="yzmImgEmail" src="" width="113" height="34" class="img_num" /></a>
+			      	<a href="javascript:void(0)" onclick="create_yzm()" class="regUpdateYzm">看不清楚？</a>
 			      	<span id="yzmEmailStyle" class="alert_display_none">
 						<img src="%bind(:4)/alert.png" width="16" height="16" class="alert_img"  />
 				  		<label id="yzm_Emailstatus"></label>
