修改控件显示，在分组框里面也可以显示

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1074,9 +1074,9 @@
 							var pwdTitleId = $("#%bind(:45)");
 							var pwdDivId = $("#%bind(:46)");
 							var pwdDiv2Id = $("#%bind(:47)");
-							sconsole.log("pwdTitleId:"+pwdTitleId);
-							console.log("pwdDivId:"+pwdDivId);
-							console.log("pwdDiv2Id:"+pwdDiv2Id);
+							//console.log("pwdTitleId:"+pwdTitleId);
+							//console.log("pwdDivId:"+pwdDivId);
+							//console.log("pwdDiv2Id:"+pwdDiv2Id);
 							
 							var pwd="";
 							var pwd2="";
