--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_MAIN_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_MAIN_HTML.html
@@ -60,7 +60,7 @@
         LoadHeader("%bind(:4)","%bind(:5)","");
         LoadMenu("%bind(:4)","%bind(:5)","");
         LoadFooter("%bind(:4)","%bind(:5)","");
-        LoadWelcome("%bind(:4)","%bind(:5)","");
+       // LoadWelcome("%bind(:4)","%bind(:5)","");
   		LoadLeftArea("%bind(:4)","%bind(:5)","");//加载常用链接和二维码
         
 		onChangTimeZone("");
